--- a/www/index.html
+++ b/www/index.html
@@ -36,23 +36,21 @@
                 <p class="event listening">Connecting to Device</p>
                 <p class="event received">Device is Ready</p>
                 
-                <a href="acc0.html">acc0.html</a>
-                <a href="acc1.html">acc1.html</a>
-                <a href="accXX.html">accXX.html</a>
-                <a href="ajax.html">ajax.html</a>                
-                <a href="batt.html">batt.html</a>
-                <a href="brow.html">brow.html</a>
-                <a href="camr.html">camr.html</a>
-                <a href="comp.html">comp.html</a>
-                <a href="cont.html">cont.html</a>
-                <a href="glob.html">glob.html</a>
-                <a href="geol.html">geol.html</a>
-                <a href="info.html">info.html</a>
-                <a href="medi.html">medi.html</a>
-                <a href="noti.html">noti.html</a>
-                <a href="vibr.html">info.html</a>
-
-
+                <a href="acc0.html">acc0.html</a><br />
+                <a href="acc1.html">acc1.html</a><br />
+                <a href="accX.html">accX.html</a><br />
+                <a href="ajax.html">ajax.html</a><br />          
+                <a href="batt.html">batt.html</a><br />
+                <a href="brow.html">brow.html</a><br />
+                <a href="camr.html">camr.html</a><br />
+                <a href="comp.html">comp.html</a><br />
+                <a href="cont.html">cont.html</a><br />
+                <a href="glob.html">glob.html</a><br />
+                <a href="geol.html">geol.html</a><br />
+                <a href="info.html">info.html</a><br />
+                <a href="medi.html">medi.html</a><br />
+                <a href="noti.html">noti.html</a><br />
+                <a href="vibr.html">info.html</a><br />
 
 
             </div>
