--- a/www/index.html
+++ b/www/index.html
@@ -39,7 +39,8 @@
                 <a href="acc0.html">acc0.html</a><br /><br />
                 <a href="acc1.html">acc1.html</a><br /><br />
                 <a href="accX.html">accX.html</a><br /><br />
-                <a href="ajax.html">ajax.html</a><br /><br />    
+                <a href="ajax.html">ajax.html</a><br /><br />
+                <a href="ajax2.html">ajax2.html</a><br /><br />  
                 <a href="batt.html">batt.html</a><br /><br />
                 <a href="brow.html">brow.html</a><br /><br />
                 <a href="camr.html">camr.html</a><br /><br />
