--- a/www/index.html
+++ b/www/index.html
@@ -40,7 +40,10 @@
                 <a href="acc1.html">acc1.html</a><br /><br />
                 <a href="accX.html">accX.html</a><br /><br />
                 <a href="ajax.html">ajax.html</a><br /><br />
-                <a href="ajax2.html">ajax2.html</a><br /><br />  
+                <a href="ajax2.html">ajax2.html</a><br /><br />
+                <a href="ajax3.html">ajax3.html</a><br /><br />
+                <a href="ajaxX1.html">ajaxX1.html</a><br /><br />
+                <a href="ajaxX2.html">ajaxX2.html</a><br /><br />
                 <a href="batt.html">batt.html</a><br /><br />
                 <a href="brow.html">brow.html</a><br /><br />
                 <a href="camr.html">camr.html</a><br /><br />
