--- a/www/ajax3.html
+++ b/www/ajax3.html
@@ -78,7 +78,7 @@
 		);
 		document.getElementById('carga-parametros').addEventListener(
 			"click",
-			function(){ CargaURLoFicheroLocal('resultado','http://media-bro.com/cursos/phonegap/tabla-multiplicar.php','numero=6'); }
+			function(){ CargaURLoFicheroLocal('resultado','http://media-bro.com/cursos/phonegap/tabla-multiplicar.php?','numero=6'); }
 		);
 		document.getElementById('carga-a').addEventListener(
 			"click",
@@ -143,7 +143,7 @@
 			xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
 			xmlhttp.setRequestHeader("Content-length", parametros.length);
 			xmlhttp.setRequestHeader("Connection", "close");
-			xmlhttp.send( "?" + parametros ); // llamada con parametros
+			xmlhttp.send( parametros ); // llamada con parametros
 		}else{
 			xmlhttp.send(); // llamada sin parametros
 		}
