AJAX red white all

--- a/www/ajaxX1.html
+++ b/www/ajaxX1.html
@@ -43,7 +43,8 @@ function inici(){  // // // // // // // // INICI
 
 			//document.getElementById(id).innerHTML=dades[0];
 			//document.getElementById(id).innerHTML=dades.red;
-			document.getElementById(id).innerHTML=dades.red[2];
+			//document.getElementById(id).innerHTML=dades.red[2];
+      document.getElementById(id).innerHTML=dades ;
 			
           } else {
             //alert(xmlhttp.status + " - ! -");
